--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 allennlp==0.9.0
+Cython
 flair
+google_trans_new
 numpy==1.15.2
 pandas
-plotly
+setuptools>=51.0.0
 streamlit
 transformers==3.5.0
 torch
